--- a/portfolio.html
+++ b/portfolio.html
@@ -1,67 +1,80 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <title>
         Portfolio
     </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<!-- Nav Bar -->
-<header class="navbar-expand-sm navbar-expand-md navbar navbar-expand-lg navbar-expand-xl navbar-light bg-light">
-    <div class="row">
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-3">
-            <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-3">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Nav Bar -->
+    <header class="navbar-expand-sm navbar-expand-md navbar navbar-expand-lg navbar-expand-xl navbar-light bg-light">
+        <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-3">
+                <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-3">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="portfolio.html">Portfolio <span
+                                    class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 </head>
 
 <body>
-    
+
     <div class="container">
         <div class="row">
             <p class="h1">Portfolio</p>
         </div>
         <div class="row">
             <div class="col-md-4">
-                    <img src="assets/images/image1.jpg" alt="image1" class="img-thumbnail">
-                    <img src="assets/images/image2.jpg" alt="image2" class="img-thumbnail">
-                    <img src="assets/images/image3.jpg" alt="image3" class="img-thumbnail">
+                <img src="assets/images/image1.jpg" alt="image1" class="img-thumbnail">
+                <img src="assets/images/image2.jpg" alt="image2" class="img-thumbnail">
+                <img src="assets/images/image3.jpg" alt="image3" class="img-thumbnail">
             </div>
             <div class="col-md-4">
-                    <img src="assets/images/image4.jpg" alt="image4" class="img-thumbnail">
-                    <img src="assets/images/image5.jpg" alt="image5" class="img-thumbnail">
+                <img src="assets/images/image4.jpg" alt="image4" class="img-thumbnail">
+                <img src="assets/images/image5.jpg" alt="image5" class="img-thumbnail">
             </div>
         </div>
     </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <footer class="footer">
+        <p class="text-muted">Copyright ©</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
