--- a/contact.html
+++ b/contact.html
@@ -13,34 +13,19 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <!-- Nav Bar -->
-    <header class="navbar-expand-sm navbar-expand-md navbar navbar-expand-lg navbar-expand-xl navbar-light bg-light">
-        <div class="row">
-            <div class="col-md-1">
-            </div>
-            <div class="col-md-3">
-                <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-3">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">About </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                        </li>
-                </div>
+    <header class="navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="index.html">About</a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio
+                    <a class="nav-item nav-link active" href="contact.html">Contact<span
+                            class="sr-only">(current)</span></a></a>
+
             </div>
         </div>
     </header>
@@ -53,7 +38,13 @@
         <div class="row">
             <p class="h1">Contact</p>
         </div>
-
+        <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-10">
+                <hr class="col-md-12">
+            </div>
+        </div>
         <form>
             <div class="form-group">
                 <label for="Name1">Name</label>
