--- a/portfolio.html
+++ b/portfolio.html
@@ -11,35 +11,20 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!-- Nav Bar -->
-    <header class="navbar-expand-sm navbar-expand-md navbar navbar-expand-lg navbar-expand-xl navbar-light bg-light">
-        <div class="row">
-            <div class="col-md-1">
-            </div>
-            <div class="col-md-3">
-                <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-3">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">About </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="portfolio.html">Portfolio <span
-                                    class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                </div>
+
+    <header class="navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="index.html">About</a>
+                <a class="nav-item nav-link active" href="portfolio.html">Portfolio<span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
+
             </div>
         </div>
     </header>
@@ -51,6 +36,13 @@
     <div class="container">
         <div class="row">
             <p class="h1">Portfolio</p>
+        </div>
+        <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-10">
+                <hr class="col-md-12">
+            </div>
         </div>
         <div class="row">
             <div class="col-md-4">
