--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,27 @@
         <div class="row">
             <div class="col-md-4">
                 <img src="assets/images/image1.jpg" alt="image1" class="img-thumbnail">
+                <div class="caption post-content">
+                    <h3>Nuts</h3>
+                </div>
                 <img src="assets/images/image2.jpg" alt="image2" class="img-thumbnail">
+                <div class="caption post-content">
+                        <h3>Trees</h3>
+                    </div>
                 <img src="assets/images/image3.jpg" alt="image3" class="img-thumbnail">
+                <div class="caption post-content">
+                        <h3>Runway</h3>
+                    </div>
             </div>
             <div class="col-md-4">
                 <img src="assets/images/image4.jpg" alt="image4" class="img-thumbnail">
+                <div class="caption post-content">
+                        <h3>People</h3>
+                    </div>
                 <img src="assets/images/image5.jpg" alt="image5" class="img-thumbnail">
+                <div class="caption post-content">
+                        <h3>Cat</h3>
+                    </div>
             </div>
         </div>
     </div>
