--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
 
 
     <header class="navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light">
@@ -45,7 +45,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img src="assets/images/image1.jpg" alt="image1" class="img-thumbnail">
+                <img src="Assets/Images/image1.jpg" alt="image1" class="img-thumbnail">
                 <div class="caption post-content">
                     <h3>Nuts</h3>
                 </div>
