--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
 
     <header class="navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
