--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
 
     <header class="navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><span style="color:#ffffff">Greg Glinoga</span></a>
@@ -44,7 +44,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <img src="assets/images/gg.jpg" alt="gg" class="img-thumbnail">
+                <img src="Assets/Images/gg.jpg" alt="gg" class="img-thumbnail">
             </div>
             <div class="col-md-9">
                 <div class="row">
